// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ClickToCode does not render if no children 1`] = `<div />`;

exports[`ClickToCode renders all children 1`] = `
<div>
  <code
    class="sc-aXZVg jQhmTm"
  >
    <div>
      <span>
        hello
      </span>
      hi!
    </div>
  </code>
</div>
`;

exports[`ClickToCode renders children as code if no code is provided 1`] = `
<div>
  <code
    class="sc-aXZVg jQhmTm"
  >
    hellohi!
  </code>
</div>
`;

exports[`ClickToCode renders code as the code when code is available 1`] = `
<div>
  <code
    class="sc-aXZVg jQhmTm"
  >
    hello
  </code>
</div>
`;

exports[`ClickToCode renders if no CodeComponent is provided 1`] = `<div />`;
